--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-xmlns:tools="http://schemas.android.com/tools"
-android:id="@+id/constraintLayout"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-tools:context=".MainActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/constraintLayout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".MainActivity">
 
     <ScrollView
         android:id="@+id/scrollView2"
@@ -396,7 +396,7 @@ tools:context=".MainActivity">
                 android:textStyle="italic"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/activity_main_recycler_view_stars" />
+                app:layout_constraintTop_toBottomOf="@+id/activity_main_layout_stars" />
 
             <View
                 android:id="@+id/activity_main_line_3"
@@ -630,14 +630,20 @@ tools:context=".MainActivity">
                 app:layout_constraintStart_toEndOf="@+id/activity_main_text_view_main_rating" />
 
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/activity_main_recycler_view_stars"
+
+            <LinearLayout
+                android:id="@+id/activity_main_layout_stars"
                 android:layout_width="wrap_content"
-                android:layout_height="24dp"
-                android:layout_marginTop="16dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
+                android:orientation="horizontal"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/activity_main_text_view_rate" />
+                app:layout_constraintTop_toBottomOf="@+id/activity_main_text_view_rate"/>
 
 
         </android.support.constraint.ConstraintLayout>
